[package]
name = "wirejack"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.10"
notify-debouncer-mini = "0.7"

# Logging
tracing = "0.1"

# HTTP
http = "1.2.0"
http-serde-ext = "1.0.2"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
tower = { version = "0.5.1", features = ["make", "util"] }

# TLS
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.23.20"
tokio-rustls = "0.26"
webpki-roots = "0.26.7"
rustls-pki-types = "1.10"
time = "0.3.37"

# Python
pyo3 = { version = "0.27", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }

# CLI app
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
